# docs/接口文档/openapi/openapi.yaml
@@ -214,6 +214,8 @@ paths:
     $ref: ./paths/minigame.yaml#/~1api~1v1~1minigame~1fishing~1use-bait
   /api/v1/minigame/slot/resolve:
     $ref: ./paths/minigame.yaml#/~1api~1v1~1minigame~1slot~1resolve
+  /api/v1/minigame/gambling/resolve:
+    $ref: ./paths/minigame.yaml#/~1api~1v1~1minigame~1gambling~1resolve
   /api/v1/minigame/redeem:
     $ref: ./paths/minigame.yaml#/~1api~1v1~1minigame~1redeem
   /api/v1/minigame/redeem-all:
@@ -425,6 +427,8 @@ components:
       $ref: ./schemas/minigame.yaml#/MiniGameRedeemResult
     MiniGameRedeemAllResult:
       $ref: ./schemas/minigame.yaml#/MiniGameRedeemAllResult
+    GamblingRoundResult:
+      $ref: ./schemas/minigame.yaml#/GamblingRoundResult
     SlotRoundResult:
       $ref: ./schemas/minigame.yaml#/SlotRoundResult
     SlotConfig:
